<resources>
    <string name="app_name">RecruitmentTask</string>
    <string name="search_btn">Search</string>
    <string name="origin_station">Origin station</string>
    <string name="destination_station">Destination station</string>
    <string name="departure_date">Departure date:</string>
    <string name="adults_label">Adults:</string>
    <string name="teens_label">Teens:</string>
    <string name="children_label">Children:</string>
    <string name="network_error_msg">Network error occurred.</string>
    <string name="input_error_msg">There is something wrong with input!</string>
    <string name="date_label">Date:</string>
    <string name="duration_label">Duration:</string>
    <string name="flight_number_label">Flight number:</string>
    <string name="price_label">Price:</string>
    <string name="infants_left_label">Infants left:</string>
    <string name="fare_class_label">Fare class:</string>
    <string name="discount_percent_label">Discount in percent:</string>
    <string name="toast_error_message">Something is wrong!</string>
    <string-array name="rangeSliderValues">
        <item>150</item>
        <item>1000</item>
    </string-array>
    <string name="no_flights_found">No flights were found for given parameters</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_msg">There is no Internet connection which this app requires</string>
</resources>