<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/BigText"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/flightDateTV"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toEndOf="@+id/dateLabelTV"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/flightDurationTV"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toEndOf="@+id/durationLabelTV"
        app:layout_constraintTop_toTopOf="@+id/flightDateTV" />

    <TextView
        android:id="@+id/flightPriceTV"
        style="@style/RegularText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flightDurationTV" />

    <TextView
        android:id="@+id/dateLabelTV"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/date_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/flightDateTV" />

    <TextView
        android:id="@+id/durationLabelTV"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/duration_label"
        app:layout_constraintStart_toEndOf="@+id/flightDateTV"
        app:layout_constraintTop_toTopOf="@+id/flightDateTV" />

    <TextView
        android:id="@+id/priceLabelTV"
        style="@style/SmallText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/price_label"
        app:layout_constraintEnd_toStartOf="@+id/flightPriceTV"
        app:layout_constraintTop_toTopOf="@+id/flightPriceTV" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/flightNrLabelTV"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="8dp"
            android:text="@string/flight_number_label" />

        <TextView
            android:id="@+id/flightNrTV"
            style="@style/SmallText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>