<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardElevation="5dp"
        app:cardUseCompatPadding="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".view.fragments.FlightDetailFragment"
            android:paddingVertical="16dp">

            <TextView
                android:id="@+id/detailOriginLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="@string/origin_station"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/detailDestinationLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/destination_station"
                app:layout_constraintStart_toStartOf="@+id/detailOriginLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/detailOriginLabelTV" />

            <TextView
                android:id="@+id/detailInfantsLeftLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/infants_left_label"
                app:layout_constraintStart_toStartOf="@+id/detailDestinationLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/detailDestinationLabelTV" />

            <TextView
                android:id="@+id/detailFareClassLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/fare_class_label"
                app:layout_constraintStart_toStartOf="@+id/detailInfantsLeftLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/detailInfantsLeftLabelTV" />

            <TextView
                android:id="@+id/detailDiscountLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/discount_percent_label"
                app:layout_constraintStart_toStartOf="@+id/detailFareClassLabelTV"
                app:layout_constraintTop_toBottomOf="@+id/detailFareClassLabelTV" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/barrier1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="right"
                app:constraint_referenced_ids="detailOriginLabelTV,detailDestinationLabelTV,detailInfantsLeftLabelTV,detailFareClassLabelTV,detailDiscountLabelTV"
                tools:layout_editor_absoluteX="226dp"
                tools:layout_editor_absoluteY="142dp" />

            <TextView
                android:id="@+id/detailOriginTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/detailOriginLabelTV" />

            <TextView
                android:id="@+id/detailDestinationTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/detailDestinationLabelTV" />

            <TextView
                android:id="@+id/detailInfantsLeftTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/detailInfantsLeftLabelTV" />

            <TextView
                android:id="@+id/detailFareClassTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/detailFareClassLabelTV" />

            <TextView
                android:id="@+id/detailDiscountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="TextView"
                app:layout_constraintStart_toEndOf="@+id/barrier1"
                app:layout_constraintTop_toTopOf="@+id/detailDiscountLabelTV" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>