<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.recruitmenttask.viewmodel.FlightSearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.fragments.FlightSearchFragment">

        <Button
            android:id="@+id/searchBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/search_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/originStationACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/origin_station"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <AutoCompleteTextView
            android:id="@+id/destinationStationACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/destination_station"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/originStationACTV" />

        <ImageButton
            android:id="@+id/showCalendarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_white_callendar_24"
            app:layout_constraintStart_toEndOf="@+id/selectedDateTV"
            app:layout_constraintTop_toBottomOf="@+id/destinationStationACTV" />

        <TextView
            android:id="@+id/selectedDateTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@{viewModel.date.toString()}"
            app:layout_constraintBottom_toBottomOf="@+id/showCalendarBtn"
            app:layout_constraintStart_toEndOf="@+id/departureDateLabelTV"
            app:layout_constraintTop_toTopOf="@+id/showCalendarBtn" />

        <NumberPicker
            android:id="@+id/adultsNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateTV" />

        <NumberPicker
            android:id="@+id/teensNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/childrenNumberPicker"
            app:layout_constraintStart_toEndOf="@+id/adultsNumberPicker"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateTV" />

        <NumberPicker
            android:id="@+id/childrenNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedDateTV" />

        <TextView
            android:id="@+id/departureDateLabelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/departure_date"
            app:layout_constraintBottom_toBottomOf="@+id/selectedDateTV"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/selectedDateTV" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>